Updated code with changes

--- a/index.html
+++ b/index.html
@@ -213,11 +213,7 @@
                 <h2>Notes</h2>
                 <button class="close-notes">×</button>
             </div>
-            <textarea 
-                id="userNotes" 
-                placeholder="Type your notes here..."
-                class="notes-textarea"
-            ></textarea>
+            <textarea id="userNotes" class="notes-textarea" placeholder="Write your notes here..."></textarea>
             <div class="notes-footer">
                 <button class="save-notes">Save Notes</button>
             </div>
