--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                 <!-- Resume Upload Card -->
                 <div class="card upload-card" id="resume-section">
-                    <h2>Upload Resume</h2>
+                    <h2>Upload Your Resume</h2>
                     <p class="helper-text">Upload your resume to get personalized topic suggestions</p>
                     <div class="upload-area" id="uploadArea">
                         <input type="file" id="resumeUpload" accept=".pdf,.doc,.docx" hidden>
